--- a/База_рекламаций/reclamationhub/static/admin/css/custom_admin.css
+++ b/База_рекламаций/reclamationhub/static/admin/css/custom_admin.css
@@ -25,35 +25,6 @@
     background-color: #f5f5f5 !important; /* легкий фон для заголовков */
 }
 
-/* ---------------- Стиль для кнопки сворачивания фильтров ------------------ */
-.filter-toggle {
-    background: #417690;
-    color: white;
-    padding: 5px 10px;
-    cursor: pointer;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    text-align: center;
-}
-
-.filter-toggle:hover {
-    background: #205067;
-}
-
-.filter-content {
-    transition: all 0.3s ease-in-out;
-    overflow: hidden;
-    opacity: 1;
-    max-height: 2000px;
-}
-
-.collapsed .filter-content {
-    opacity: 0;
-    max-height: 0;
-    margin: 0;
-    padding: 0;
-}
-
 /* ---------- Стили для секции "Принятые меры" для внесения данных ----------- */
 .measures-section {
     transition: background-color 1s;
@@ -66,4 +37,45 @@
     transition: background-color 1s;
     padding: 10px;
     border-radius: 4px;
+}
+
+/* ------------- Размещаем фильтры в навигационной панели ---------------- */
+#changelist-filter {
+    width: 100% !important;
+    padding: 10px !important;
+    background: transparent !important;
+    border: none !important;
+}
+
+/* Стиль для кнопки сворачивания фильтров */
+.filter-toggle {
+    background: #417690;
+    color: white;
+    width: 85% !important;
+    display: block !important;
+    margin: 0 auto !important;
+    padding: 5px 10px !important;
+    cursor: pointer;
+    border-radius: 4px;
+    text-align: center;
+    transform: translateX(-40px) !important;
+}
+
+.filter-toggle:hover {
+    background: #205067;
+}
+
+/* Стили для контента фильтров */
+.filter-content {
+    transition: all 0.3s ease-in-out;
+    overflow: hidden;
+    opacity: 1;
+    max-height: 2000px;
+}
+
+.collapsed .filter-content {
+    opacity: 0;
+    max-height: 0;
+    margin: 0;
+    padding: 0;
 }
