Обновлены модели reclamation и investigation

--- a/База_рекламаций/reclamationhub/static/admin/css/custom_admin.css
+++ b/База_рекламаций/reclamationhub/static/admin/css/custom_admin.css
@@ -1,4 +1,4 @@
-/* ------------- Правило для всех заголовков таблиц --------------- */
+/* --------------- Стиль для всех заголовков таблиц ------------------ */
 #result_list thead th {
     font-size: 9px !important; /* изменяем размер шрифта заголовков в таблице админ-панели */
     /* text-transform: none !important;   отключаем перевод в верхний регистр */
