--- a/База_рекламаций/reclamationhub/templates/admin/investigation_changelist.html
+++ b/База_рекламаций/reclamationhub/templates/admin/investigation_changelist.html
@@ -4,7 +4,7 @@
 {% block object-tools-items %}
     <li>
         <a href="{% url 'admin:add_group_investigation' %}" class="addlink">
-            Добавить групповой акт
+            Групповой акт исследования
         </a>
     </li>
     {{ block.super }}
