--- a/База_рекламаций/reclamationhub/templates/admin/reclamation_changelist.html
+++ b/База_рекламаций/reclamationhub/templates/admin/reclamation_changelist.html
@@ -4,7 +4,7 @@
 {% block object-tools-items %}
     <li>
         <a href="{% url 'admin:add_invoice' %}" class="addlink">
-            Добавить накладную
+            Групповая накладная
         </a>
     </li>
     {{ block.super }}
