--- a/База_рекламаций/reclamationhub/templates/home.html
+++ b/База_рекламаций/reclamationhub/templates/home.html
@@ -97,9 +97,9 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Изделие</th>
-                                <th>Статус</th>
+                                <th>Период выявления дефекта</th>
                                 <th>Дефект</th>
-                                <th>Дата</th>
+                                <th>Количество</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -107,9 +107,9 @@
                             <tr>
                                 <td>{{ reclamation.id }}</td>
                                 <td>{{ reclamation.product_name }} - {{ reclamation.product }}</td>
-                                <td>{{ reclamation.get_status_display }}</td>
+                                <td>{{ reclamation.defect_period }}</td>
                                 <td>{{ reclamation.claimed_defect|truncatechars:50 }}</td>
-                                <td>{{ reclamation.message_received_date|date:"d.m.Y" }}</td>
+                                <td>{{ reclamation.products_count }}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -153,7 +153,7 @@
 
     // График статусов
     new Chart(document.getElementById('statusChart'), {
-        type: 'pie',
+        type: 'bar',
         data: {
             labels: statusData.map(item => {
                 switch(item.status) {
@@ -172,7 +172,7 @@
             responsive: true,
             plugins: {
                 legend: {
-                    position: 'right'
+                    display: false
                 }
             }
         }
