Создано новое приложение utils

--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -23,6 +23,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{% url 'export_excel' %}">
+                            <i class="fas fa-file-excel"></i> Экспорт в Excel
+                        </a>
+                    </li>
                     <!-- Здесь будут добавляться другие пункты меню -->
                 </ul>
                 <ul class="navbar-nav">
