--- a/База_рекламаций/reclamationhub/templates/admin/reclamation_changelist.html
+++ b/База_рекламаций/reclamationhub/templates/admin/reclamation_changelist.html
@@ -3,6 +3,11 @@
 
 {% block object-tools-items %}
     <li>
+        <a href="{% url 'admin:export_excel' %}" class="addlink">
+            Экспорт в Excel
+        </a>
+    </li>
+    <li>
         <a href="{% url 'admin:add_invoice' %}" class="addlink">
             Групповая накладная
         </a>
