--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="{% url 'export_excel' %}">
+                        <a class="nav-link fw-bold text-white" href="{% url 'export_excel' %}">
                             <i class="fas fa-file-excel"></i> Экспорт в Excel
                         </a>
                     </li>
