--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -37,7 +37,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-white" href="{% url 'admin:index' %}">Админ-панель</a>
+                        <a class="nav-link fw-bold text-white" href="{% url 'admin:index' %}">Редактирование</a>
                     </li>
                 </ul>
             </div>
