--- a/База_рекламаций/reclamationhub/templates/admin/nav_sidebar.html
+++ b/База_рекламаций/reclamationhub/templates/admin/nav_sidebar.html
@@ -2,7 +2,7 @@
 
 <button class="sticky toggle-nav-sidebar" id="toggle-nav-sidebar" aria-label="Toggle navigation"></button>
 <nav class="sticky" id="nav-sidebar" aria-label="Sidebar">
-  <input type="search" id="nav-filter" placeholder="{% translate 'Введите текст для фильтрации...' %}" aria-label="Фильтр элементов навигации">
+  <input type="search" id="nav-filter" placeholder="{% translate 'Поиск по разделам...' %}" aria-label="Поиск по разделам админки">
   {% include 'admin/app_list.html' with app_list=available_apps show_changelinks=False %}
 
   {% if cl.has_filters %}
