--- a/База_рекламаций/reclamationhub/templates/admin/nav_sidebar.html
+++ b/База_рекламаций/reclamationhub/templates/admin/nav_sidebar.html
@@ -1,3 +1,7 @@
+<!--
+ Шаблон для изменения надписей в стандартной панели фильтров (в левой части страницы)
+-->
+
 {% load i18n admin_list %}
 
 <button class="sticky toggle-nav-sidebar" id="toggle-nav-sidebar" aria-label="Toggle navigation"></button>
