--- a/База_рекламаций/reclamationhub/templates/admin/add_group_invoice_number.html
+++ b/База_рекламаций/reclamationhub/templates/admin/add_group_invoice_number.html
@@ -4,6 +4,15 @@
 -->
 
 {% extends "admin/group_form_base.html" %}
+{% load i18n admin_urls %}
+
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+    <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
+    &rsaquo; <a href="{% url 'admin:reclamations_reclamation_changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>
+    &rsaquo; {{ title }}
+</div>
+{% endblock %}
 
 {% block extrastyle %}
 {{ block.super }}
