--- a/База_рекламаций/reclamationhub/templates/admin/reclamation_changelist.html
+++ b/База_рекламаций/reclamationhub/templates/admin/reclamation_changelist.html
@@ -1,6 +1,15 @@
 {% extends 'admin/change_list.html' %}
 {% load i18n admin_urls %}
 
+{% if not is_popup %}
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+    <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
+    &rsaquo; {{ cl.opts.verbose_name_plural|capfirst }}
+</div>
+{% endblock %}
+{% endif %}
+
 {% block object-tools-items %}
     <li>
         <a href="{% url 'admin:export_excel' %}" class="addlink">
