Обновлены сообщения об ошибках

--- a/База_рекламаций/reclamationhub/templates/admin/change_form.html
+++ b/База_рекламаций/reclamationhub/templates/admin/change_form.html
@@ -1,7 +1,8 @@
 <!--
- Шаблон для изменения на страницах форм добавления/изменения актов рекламаций и исследования
- сообщения об ошибке с английского "Please correct the errors below." на русский вариант
- и сокращения ссылки при открытии конкретного акта рекламации или исследования
+ Базовый шаблон для форм добавления/изменения актов рекламаций и исследования.
+
+ Мы его переопределяем для изменения сообщений об ошибке с английского "Please correct the errors below."
+ на русский вариант и сокращения ссылки при открытии конкретного акта рекламации или исследования
 -->
 
 {% extends "admin/change_form.html" %}
@@ -20,6 +21,7 @@
 {% block extrahead %}
 {{ block.super }}
 <style>
+/* Изменяем стандартное сообщение об ошибке на английском на свой вариант */
 .errornote {
     font-size: 0 !important;
 }
