--- a/База_рекламаций/reclamationhub/templates/admin/investigation_changelist.html
+++ b/База_рекламаций/reclamationhub/templates/admin/investigation_changelist.html
@@ -1,3 +1,8 @@
+<!--
+ Дочерний шаблон страницы списка актов исследования.
+ В шаблон добавили кнопку для перехода на форму группового акта исследования
+-->
+
 {% extends "admin/change_list.html" %}
 {% load i18n admin_urls %}
 
