--- a/База_рекламаций/reclamationhub/templates/admin/reclamation_changelist.html
+++ b/База_рекламаций/reclamationhub/templates/admin/reclamation_changelist.html
@@ -1,3 +1,8 @@
+<!--
+ Дочерний шаблон страницы списка рекламаций.
+ В шаблон добавили кнопку для перехода на форму групповой накладной и экспорта в Excel
+-->
+
 {% extends 'admin/change_list.html' %}
 {% load i18n admin_urls %}
 
