--- a/База_рекламаций/reclamationhub/templates/base_old.html
+++ b/База_рекламаций/reclamationhub/templates/base_old.html
@@ -33,35 +33,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <!-- <a class="nav-link fw-bold text-white" href="{% url 'admin:reclamations_reclamation_changelist' %}"> жирный шрифт -->
-                        <a class="nav-link text-white" href="{% url 'admin:reclamations_reclamation_changelist' %}">
-                            Рекламации
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="{% url 'admin:investigations_investigation_changelist' %}">
-                            Акты исследования
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#" onclick="alert('Раздел находится в разработке'); return false;">
-                            Претензии
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#" onclick="alert('Раздел находится в разработке'); return false;">
-                            Аналитика
-                        </a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link fw-bold text-white" href="{% url 'admin:index' %}">Панель редактирования</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link fw-bold text-white" href="{% url 'export_excel' %}">
                             <i class="fas fa-file-excel"></i> Экспорт в Excel
                         </a>
+                    </li>
+                    <!-- Здесь будут добавляться другие пункты меню -->
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold text-white" href="{% url 'admin:index' %}">Редактирование</a>
                     </li>
                 </ul>
             </div>
@@ -80,6 +60,8 @@
         </div>
     </footer>
 
+    <!-- Bootstrap JS -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     {% block extra_js %}{% endblock %}
 </body>
