--- a/База_рекламаций/reclamationhub/templates/home.html
+++ b/База_рекламаций/reclamationhub/templates/home.html
@@ -1,4 +1,7 @@
-<!-- Главная страница сайта -->
+<!--
+ Главная страница сайта
+ Наследуемся от базового base.html и указываем конкретный контекст страницы
+ -->
 
 {% extends 'base.html' %}
 {% load static %}
