--- a/База_рекламаций/reclamationhub/templates/sidebar_sections.html
+++ b/База_рекламаций/reclamationhub/templates/sidebar_sections.html
@@ -1,3 +1,13 @@
+<!--
+ Шаблон сайдбара слева на главной странице со ссылками на приложения
+ (reclamationhub\core\templatetags\sidebar_tags.py - метод для показа ссылок)
+ -->
+
+<!--
+ Сайдбар не использую, т.к. получилось не красиво.
+ Ссылки на приложения добавлены сверху в навигационную панель
+ -->
+
 {% for section in sections %}
     {% if section.slug == current_section %}
         <li class="sidebar-nav-link selected">
