--- a/База_рекламаций/reclamationhub/templates/admin/base_site.html
+++ b/База_рекламаций/reclamationhub/templates/admin/base_site.html
@@ -5,7 +5,10 @@
 
 {% extends "admin/base.html" %}
 
-{% block title %}{% if subtitle %}{{ subtitle }} | {% endif %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
+{% block title %}
+    {% if subtitle %}{{ subtitle }} | {% endif %}
+    {% if opts %}{{ opts.app_config.verbose_name }}{% else %}Панель редактирования{% endif %}
+{% endblock %}
 
 {% block branding %}
 <h1 id="site-name">
