--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -49,7 +49,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#" onclick="alert('Раздел находится в разработке'); return false;">
+                        <!-- <a class="nav-link text-white" href="#" onclick="alert('Раздел находится в разработке'); return false;"> -->
+                        <a class="nav-link text-white" href="{% url 'reports:analytics' %}" class="nav-link">
                             Аналитика
                         </a>
                     </li>
